--- a/style.css
+++ b/style.css
@@ -89,11 +89,13 @@ section {
 .home {
   display: flex;
   align-items: center;
-  padding: 0 9%;
+  padding: 12rem 9% 2rem;
+  position: relative;
 }
 
 .home-content {
   max-width: 60rem;
+  padding-bottom: 9rem;
 }
 
 .home-content h1 {
@@ -102,6 +104,7 @@ section {
   font-size: 4.6rem;
   font-weight: 700;
   line-height: 1.3;
+  margin-bottom: 1rem;
 }
 
 .home-content h1 span {
@@ -110,11 +113,13 @@ section {
 
 .home-content .text-animate {
   position: relative;
-  width: 32.8rem;
+  width: 100%;
+  max-width: 52rem;
 }
 
 .home-content .text-animate h3 {
   font-size: 3rem;
+  line-height: 1.3;
   font-weight: 700;
   color: transparent;
   -webkit-text-stroke: 0.7px var(--main-color);
@@ -252,7 +257,8 @@ section {
 
 .home-sci {
   position: absolute;
-  bottom: 2rem;
+  bottom: 6rem;
+  left: 9%;
   width: 170px;
   display: flex;
   justify-content: space-evenly;
